log

Fri Mar 11 19:40:44 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
0ef967e
Fri Mar 11 20:03:52 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
cb6e569
Fri Mar 11 20:20:26 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:61:13: error: unused variable 'newperson' [-Werror=unused-variable]
    Persona *newperson;
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b9a3f4e
Fri Mar 11 20:34:56 HSP 2022: 
 exercises.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:67:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    edad = newperson->rut ;
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
185eed7
